traces/bug_805.txt
src/fflib/AFunction.cpp:1842: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of TheaddingInitFunct accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


src/fflib/AFunction.cpp:1842:1: initialization of TheaddingInitFunct
1840.   
1841.   // <<addingInitFunct>>
1842. > static addingInitFunct TheaddingInitFunct(-10000,Init_map_type); 
1843.   
1844.   C_F0  opVI::code2(const basicAC_F0 &args) const

src/fflib/AFunction.cpp:1842:24: call to addingInitFunct_addingInitFunct
1840.   
1841.   // <<addingInitFunct>>
1842.   static addingInitFunct TheaddingInitFunct(-10000,Init_map_type); 
                               ^
1843.   
1844.   C_F0  opVI::code2(const basicAC_F0 &args) const

src/fflib/InitFunct.hpp:42:5: call to addInitFunct
  40.     addingInitFunct(int i,void  (* f)(),const char *name="") {
  41.       // [[file:~/ff/src/fflib/InitFunct.cpp::addInitFunct]]
  42.       addInitFunct(i,f,name);
            ^
  43.     }
  44.   } ;

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
